load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.lib.json",
    deps = ["//:tsconfig"],
)

ts_project(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    declaration = True,
    tsconfig = "tsconfig",
)

nodejs_binary(
    name = "server",
    data = ["lib"],
    entry_point = "index.ts",
)

nodejs_image(
    name = "base_image",
    binary = "server",
    node_repository_name = "nodejs",
)

container_image(
    name = "image",
    base = "base_image",
    stamp = "@io_bazel_rules_docker//stamp:always",
)
